--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,16 +4,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
-	<title>Recipe App</title>
+	<title>Online Library</title>
 	<link rel="shortcut icon" type="image/png" href="/images/icon.png" />
-	<link rel="stylesheet" href="/css/bootstrap.css">
-	<link rel="stylesheet" href="/css/recipe_app.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/css/basic.css">
 </head>
 
 <body>
+	<%- include ('partials/navigation') %>
+
 	<div id="nav">
 		<div class="col-sm nav-align">
-			<h1 id="title">Recipe App</h1>
+			<h1 id="title">Online Library</h1>
 		</div>
 		<div class="col-sm nav-align">
 			<a href="/">
@@ -26,6 +28,7 @@
 		<%- body %>
 	</div>
 
+	<%- include ('partials/footer') %>
 </body>
 
 </html>
