--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,6 +21,12 @@
 			<a href="/">
 				<span class="button">Home</span>
 			</a>
+			<a href="/booklist">
+				<span class="button">Booklist</span>
+			</a>
+			<a href="/login">
+				<span class="button">Login/Logout</span>
+			</a>
 		</div>
 	</div>
 
