--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -11,6 +11,7 @@ body {
   width: 100%;
   height: 110px;
   padding: 20px 0 5px 0;
+  text-align: center;
   border-bottom: solid 8px #697acb;
   box-shadow: 10px 10px 10px #ccc;
   position: absolute;
@@ -40,6 +41,15 @@ a {
 .nav-align {
   text-align: center;
   padding: 3px 0;
+}
+
+#footer {
+  display: block;
+  text-align: center;
+  padding-top: 40px;
+  position: relative;
+  height: 60px;
+  width: 100%;
 }
 
 .container {
