--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
 	<title>Online Library</title>
-	<link rel="shortcut icon" type="image/png" href="/images/icon.png" />
-	<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="/css/basic.css">
+	<link rel="shortcut icon" type="image/png" href="images/icon.jpg" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/basic.css">
 </head>
 
 <body>
@@ -21,10 +21,10 @@
 			<a href="/">
 				<span class="button">Home</span>
 			</a>
-			<a href="/booklist">
+			<a href="/booklist.ejs">
 				<span class="button">Booklist</span>
 			</a>
-			<a href="/login">
+			<a href="/login.ejs">
 				<span class="button">Login/Logout</span>
 			</a>
 		</div>
