--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -3,7 +3,7 @@
   </div>
   <div class="col-sm-6">
     <h1>Register</h1>
-    <p>Enter your info to lend books:</p>
+    <p>Enter your info to loan books:</p>
     <form action="/subscribe" method="post">
       <label for="name">Name</label>
       <input type="text" name="name" value="">
