--- a/views/booklist.ejs
+++ b/views/booklist.ejs
@@ -1,19 +1,22 @@
-<h2>Users Table</h2>
+<h2>Booklist</h2>
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
+      <th>ID</th>
+      <th>Book name</th>
+      <th>Writer</th>
+      <th>Shelf</th>
+      <th>Available for loan</th>
     </tr>
   </thead>
   <tbody>
-    <% users.forEach(user => { %>
+    <% books.forEach(book => { %>
     <tr>
       <td>
-        <%= user.fullName %>
+        <%= book.fullName %>
       </td>
       <td>
-        <%= user.email %>
+        <%= book.email %>
       </td>
     </tr>
     <% }); %>
