Made a route for booklist and created user model- fixed

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,10 +21,10 @@
 			<a href="/">
 				<span class="button">Home</span>
 			</a>
-			<a href="/booklist.ejs">
+			<a href="/booklist">
 				<span class="button">Booklist</span>
 			</a>
-			<a href="/login.ejs">
+			<a href="/login">
 				<span class="button">Login/Logout</span>
 			</a>
 		</div>
