--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,16 +1,19 @@
 <div class="col-sm-6">
-    <img src="images/cat.jpg" alt="">
-  </div>
-  <div class="col-sm-6">
-    <h1>Register</h1>
-    <p>Enter your info to loan books:</p>
-    <form action="/subscribe" method="post">
-      <label for="name">Name</label>
-      <input type="text" name="name" value="">
-      <br>
-      <label for="email">Email</label>
-      <input type="email" name="email" value="">
-      <br>
-      <input type="submit" name="" value="Submit">
-    </form>
-  </div>
+  <img src="images/cat.jpg" alt="">
+</div>
+<div class="col-sm-6">
+  <h1>Register</h1>
+  <p>Enter your info to loan books:</p>
+  <form action="/subscribe" method="post">
+    <label for="name">Name</label>
+    <input type="text" name="name" value="">
+    <br>
+    <label for="email">Email</label>
+    <input type="email" name="email" value="">
+    <br>
+    <label for="password">Password</label>
+    <input type="text" name="password" value="">
+    <br>
+    <input type="submit" name="" value="Submit">
+  </form>
+</div>
