Adjusted book info page routing
Individual book info pages are now routed to books/[book_id] rather than
/[book_id].

--- a/views/booklist.ejs
+++ b/views/booklist.ejs
@@ -16,7 +16,7 @@
         <%= book._id %>
       </td>
       <td>
-        <a href="<%= `/${book._id}`%>">
+        <a href="<%= `/books/${book._id}`%>">
             <%= book.name %>
         </a>
       </td>
