--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=0.8, maximum-scale=1">
 	<title>Online Library</title>
 	<link rel="shortcut icon" type="image/png" href="images/icon.jpg" />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="css/basic.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="/css/basic.css">
 </head>
 
 <body>
