Riina's front-part changed to english
Changed to English

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,7 @@
 <html>
-
-<head>
-    <title>Login page</title>
-</head>
-
 <body>
 
-    <h1>Simple Login Page</h1>
+    <h1>Login</h1>
     <form name="login">
         Username<input type="text" name="userid" />
         Password<input type="password" name="passwrd" />
@@ -20,7 +15,7 @@
                 window.open('target.html')
             }
             else {
-                alert("Virheellinen käyttäjätunnus tai salasana")
+                alert("Wrong username or password!")
             }
         } 
     </script>
