--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
 <div class="col-sm-6">
   <h1>Register</h1>
   <p>Enter your info to loan books:</p>
-  <form action="/subscribe" method="post">
+  <form action="/register/new" method="post">
     <label for="name">Name</label>
     <input type="text" name="name" value="">
     <br>
