--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,13 +6,13 @@
   <p>Enter your info to loan books:</p>
   <form action="/register/new" method="post">
     <label for="name">Name</label>
-    <input type="text" name="name" value="">
+    <input type="text" name="username" value="">
     <br>
     <label for="email">Email</label>
     <input type="email" name="email" value="">
     <br>
     <label for="password">Password</label>
-    <input type="text" name="password" value="">
+    <input type="password" name="password" value="">
     <br>
     <input type="submit" name="" value="Submit">
   </form>
