--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,7 +14,7 @@
     <label for="password">Password</label>
     <input type="password" name="password" value="">
     <br>
-    <input type="submit" name="" value="Submit">
+    <input type="submit" value="Submit">
   </form>
 </div>
 
