Riina: register tag added

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,6 +19,9 @@
             }
         } 
     </script>
+    <p>Not a member yet? 
+        <a href="register.ejs">Register</a>here!
+    </p>
 </body>
 
 </html>
