--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -21,7 +21,7 @@
 			<a href="/">
 				<span class="button">Home</span>
 			</a>
-			<a href="/booklist">
+			<a href="/books">
 				<span class="button">Booklist</span>
 			</a>
 			<% if(loggedIn) {%>
