--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
         } 
     </script>
     <p>Not a member yet? 
-        <a href="register.ejs">Register</a>here!
+        <a href="/register">Register</a> here!
     </p>
 </body>
 
