--- a/public/css/basic.css
+++ b/public/css/basic.css
@@ -27,6 +27,14 @@ body {
   bottom: 5%;
 }
 
+#flashmessageContainer {
+
+}
+
+#flashmessage {
+  font-size: 1.125rem;
+}
+
 #title {
   color: #625a56;
   margin: 0;
@@ -63,6 +71,54 @@ a {
 
 .container {
   padding: 0% 10%;
+}
+
+.userDetailsForm {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+  border: 3px groove grey;
+  width: 80%;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.userFormHeading {
+  text-align: center;
+}
+
+.userFormField {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+#registerLink {
+  margin-left: 10%;
+}
+
+#registerFormText {
+  margin-left: 10%;
+}
+
+.formFieldName {
+  position: relative;
+  width: 33%;
+  left: 30%;
+}
+
+.formButtonsContainer {
+  text-align: center;
+  position: relative;
+  width: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.formButton {
+  position: relative;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .button {
