--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,16 +39,14 @@
 					<span class="button">Login</span>
 				</a>
 			<% } %>
-			<div id="flashmessages">
+			<div id="flashmessageContainer">
 				<% if(flashMessages) {%>
+					<h3 id="flashmessage">
 					<% if(flashMessages.success) {%>
-						<h3>
-							<%= flashMessages.success %>
-						</h3>
+						<%= flashMessages.success %>
 					<%} else if (flashMessages.error) {%>
-						<h3>
-							<%= flashMessages.error %>
-						</h3>
+						<%= flashMessages.error %>
+					</h3>
 					<%}%>
 				<%}%>
 			</div>
